remove bootstrap, it was causing conflicts. Add Tailwind map file. Change main layout with Flowbite.

--- a/Blazor_WASM_Tailwind_Flowbite_Example/_Imports.razor
+++ b/Blazor_WASM_Tailwind_Flowbite_Example/_Imports.razor
@@ -11,4 +11,5 @@
 @using Blazor_WASM_Tailwind_Flowbite_Example.Styles.StyleComponents
 @using Blazor_WASM_Tailwind_Flowbite_Example.Styles.StyleComponents.Cards
 @using Blazor_WASM_Tailwind_Flowbite_Example.Styles.StyleComponents.Accordian
+@using Blazor_WASM_Tailwind_Flowbite_Example.Styles.StyleComponents.SideMenu
 
